resources/console/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pamela
  labels:
    app: pamela
    kyma-project.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pamela
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pamela
        kyma-project.io/component: backend
    spec:
      containers:
      - name: pamela
        image: wawrzyn321/pam:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        ports:
        - containerPort: 3001
          name: http-pamela
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      #   volumeMounts:
      #     - name: ingress-tls-cert
      #       mountPath: /etc/ingress-tls-cert/
      # volumes:
      #   - name: ingress-tls-cert
      #     secret:
      #       secretName: ingress-tls-cert
