resources/console/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pamela
  labels:
    app: pamela
spec:
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: pamela
